happy client done

--- a/index.html
+++ b/index.html
@@ -151,14 +151,144 @@
       </div>
     </div>
     <!-- package section -->
-    <div class="row">
+    <div class="container">
       <h1 class="text-center">Our Package</h1>
+
+      <div class="row mt-5 packages">
+        <div class="col-3 p-5 rounded-4">
+          <h3>$300</h3>
+          <h4>Business Fair</h4>
+          <p>For most Business fair like book fair , craft fair</p>
+          <ul class="list-unstyled d-flex flex-column">
+            <li>
+              <input class="me-2" type="checkbox" checked />limited space access
+            </li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Secuirty facility
+            </li>
+            <li><input class="me-2" type="checkbox" checked />event support</li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Decoration design
+            </li>
+            <li><input class="me-2" type="checkbox" checked />Per day bill</li>
+          </ul>
+          <div class="d-flex justify-content-center">
+            <button
+              class="btn btn-secondary rounded-pill align-self-center mx-auto"
+            >
+              Choose Plan
+            </button>
+          </div>
+        </div>
+        <div class="col-3 p-5 rounded-4">
+          <h3>$300</h3>
+          <h4>Business Fair</h4>
+          <p>For most Business fair like book fair , craft fair</p>
+          <ul class="list-unstyled d-flex flex-column">
+            <li>
+              <input class="me-2" type="checkbox" checked />limited space access
+            </li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Secuirty facility
+            </li>
+            <li><input class="me-2" type="checkbox" checked />event support</li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Decoration design
+            </li>
+            <li><input class="me-2" type="checkbox" checked />Per day bill</li>
+          </ul>
+          <div class="d-flex justify-content-center">
+            <button
+              class="btn btn-secondary rounded-pill align-self-center mx-auto"
+            >
+              Choose Plan
+            </button>
+          </div>
+        </div>
+        <div class="col-3 p-5 rounded-5 bg-primary active text-white">
+          <h3>$300</h3>
+          <h4>Business Fair</h4>
+          <p>For most Business fair like book fair , craft fair</p>
+          <ul class="list-unstyled d-flex flex-column">
+            <li>
+              <input class="me-2" type="checkbox" checked />limited space access
+            </li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Secuirty facility
+            </li>
+            <li><input class="me-2" type="checkbox" checked />event support</li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Decoration design
+            </li>
+            <li><input class="me-2" type="checkbox" checked />Per day bill</li>
+          </ul>
+          <div class="d-flex justify-content-center">
+            <button
+              class="btn btn-secondary rounded-pill align-self-center mx-auto"
+            >
+              Choose Plan
+            </button>
+          </div>
+        </div>
+        <div class="col-3 p-5 rounded-4">
+          <h3>$300</h3>
+          <h4>Business Fair</h4>
+          <p>For most Business fair like book fair , craft fair</p>
+          <ul class="list-unstyled d-flex flex-column">
+            <li>
+              <input class="me-2" type="checkbox" checked />limited space access
+            </li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Secuirty facility
+            </li>
+            <li><input class="me-2" type="checkbox" checked />event support</li>
+            <li>
+              <input class="me-2" type="checkbox" checked />Decoration design
+            </li>
+            <li><input class="me-2" type="checkbox" checked />Per day bill</li>
+          </ul>
+          <div class="d-flex justify-content-center">
+            <button
+              class="btn btn-secondary rounded-pill align-self-center mx-auto"
+            >
+              Choose Plan
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="container row-cols-4">
-      <div class="col">
-        <h1>$300</h1>
-        <h2>Business Fair</h2>
-        <p>For most Business fair like book fair , craft fair</p>
+    <!-- Happy Client -->
+
+    <div class="container">
+      <h1 class="text-center">Happy Clients Says</h1>
+      <div class="row">
+        <div class="col m-4 p-5 shadow d-flex flex-column align-items-center">
+          <p class="text-center">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt,
+            explicabo.
+          </p>
+          <img src="/images/person 1.png" alt="" />
+          <h5>Rakibul Islam</h5>
+          <p>Student</p>
+        </div>
+        <div class="col m-4 p-5 shadow d-flex flex-column align-items-center">
+          <p class="text-center">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt,
+            explicabo.
+          </p>
+          <img src="/images/person 1.png" alt="" />
+          <h5>Rakibul Islam</h5>
+          <p>Student</p>
+        </div>
+        <div class="col m-4 p-5 shadow d-flex flex-column align-items-center">
+          <p class="text-center">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt,
+            explicabo.
+          </p>
+          <img src="/images/person 1.png" alt="" />
+          <h5>Rakibul Islam</h5>
+          <p>Student</p>
+        </div>
       </div>
     </div>
     <script
